--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,10 @@ services:
     # Network mode
     network_mode: bridge
     
+    # Ports
+    ports:
+      - "8080:8080"
+    
     # Healthcheck
     healthcheck:
       test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
