--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,9 @@ pyyaml==6.0.1
 # Utilities
 requests==2.31.0
 python-dateutil==2.8.2
+
+# Web interface
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+sse-starlette==1.8.2
