--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - RING_PASSWORD=${RING_PASSWORD}
       - RUN_ONCE=false
       - TZ=America/New_York
+      - WEB_PORT=8080
     
     # Volume mappings for Unraid
     volumes:
