--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,6 +10,11 @@ on:
     branches:
       - master
   workflow_dispatch:
+    inputs:
+      force_build:
+        description: 'Force rebuild'
+        required: false
+        default: 'true'
 
 env:
   REGISTRY: ghcr.io
