Change config mount to read-write for web UI updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     
     # Volume mappings for Unraid
     volumes:
-      # Configuration
-      - ./config:/app/config:ro
+      # Configuration (read-write so web UI can update settings)
+      - ./config:/app/config
       
       # Downloaded videos (temporary storage)
       - /mnt/user/appdata/crittercatcher/downloads:/data/downloads
