Fix file permissions - run as Unraid user and set umask for world-writable files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - RUN_ONCE=false
       - TZ=America/New_York
       - WEB_PORT=8080
+      - PUID=99
+      - PGID=100
+      - UMASK=0000
     
     # Volume mappings for Unraid
     volumes:
