Add Discovery Mode: Auto-detect new objects and reprocess videos
DISCOVERY MODE:
- Automatically detect 40+ object types (wildlife, pets, vehicles, people)
- AI suggests new objects found in videos with confidence scores
- User approves/rejects discoveries via web UI
- Approved objects added to tracking list automatically
- Sample images shown for each discovery

BLACKLIST MANAGEMENT:
- Add objects to ignore list (e.g., cloud, grass, tree)
- Prevent unwanted suggestions
- UI to add/remove blacklist items
- Rejected discoveries auto-added to blacklist

REPROCESS FEATURE:
- One-click button to reprocess all videos
- Moves sorted videos back to downloads
- Deletes sorted directories
- Reanalyzes with current settings

WEB UI UPDATES:
- Discoveries section in Review & Label tab with badge counter
- Discovery mode toggle in Configuration
- Blacklist manager in Configuration
- Reprocess button in Dashboard
- Discovery threshold slider

CONFIG UPDATES:
- discovery_mode: true/false
- discovery_threshold: 0.30 (configurable)
- ignored_labels: [cloud, sky, grass]
- 40+ pre-defined discovery objects

API ENDPOINTS:
- GET /api/discoveries - List pending discoveries
- POST /api/discoveries/approve - Add to tracking
- POST /api/discoveries/ignore - Add to blacklist
- POST /api/blacklist/remove - Remove from blacklist
- POST /api/reprocess - Reprocess all videos

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -58,6 +58,21 @@ detection:
   # "people" = prioritize face recognition over object detection
   # "objects" = prioritize object detection over face recognition
   priority: people
+  
+  # Discovery mode: automatically find new objects in videos
+  discovery_mode: true
+  
+  # Confidence threshold for discovering new objects (higher than regular threshold)
+  discovery_threshold: 0.30
+  
+  # Objects to ignore (blacklist) - won't be suggested as discoveries
+  ignored_labels:
+    - cloud
+    - sky
+    - grass
+  
+  # Discovered objects pending user confirmation (managed by system)
+  discovered_labels: []
 
 # Application settings
 # Run once and exit, or run continuously
