Fix: Add volume mappings for persistent data storage
CRITICAL FIX - Data Persistence:
- Added /data/objects volume mapping to docker-compose.yml
- Moved discoveries.json to /data/objects/ for persistence
- Updated UNRAID_INSTALL.md with new volume mappings

Without these mappings, data would be lost on container updates:
- Detected object images
- Discoveries pending review
- User corrections and relabeling

Volume Mappings Added:
- /data/objects -> /mnt/user/appdata/crittercatcher/objects

Updated Installation:
- Added objects and tokens to mkdir command
- Added chmod for permissions
- Fixed /app/config to RW mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,11 @@ services:
       # Sorted videos (organized by class)
       - /mnt/user/Videos/CritterCatcher/sorted:/data/sorted
       
-      # Face encodings database
+      # Face encodings database and unknown faces
       - /mnt/user/appdata/crittercatcher/faces:/data/faces
+      
+      # Detected objects and discoveries (for Review & Label feature)
+      - /mnt/user/appdata/crittercatcher/objects:/data/objects
       
       # Ring authentication token
       - /mnt/user/appdata/crittercatcher/tokens:/data/tokens
