--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ oauthlib==3.2.2
 
 # AI/ML libraries
 # torch and torchvision installed separately in Dockerfile (CPU version)
-transformers==4.35.0
+ultralytics==8.0.200
 pillow==10.1.0
 
 # Face recognition
