--- a/config/config.yaml
+++ b/config/config.yaml
@@ -16,27 +16,31 @@ ring:
 
 # Detection settings
 detection:
-  # Object labels to detect (add any objects you want to detect)
+  # YOLO model selection: yolov8n (nano - fastest), yolov8s (small), yolov8m (medium), 
+  # yolov8l (large), yolov8x (extra large - most accurate)
+  yolo_model: yolov8n
+  
+  # Object labels to detect - MUST match YOLO COCO classes
+  # Available COCO classes: person, bicycle, car, motorcycle, airplane, bus, train, truck, boat,
+  # traffic light, fire hydrant, stop sign, parking meter, bench, bird, cat, dog, horse, sheep,
+  # cow, elephant, bear, zebra, giraffe, backpack, umbrella, handbag, tie, suitcase, frisbee,
+  # skis, snowboard, sports ball, kite, baseball bat, baseball glove, skateboard, surfboard,
+  # tennis racket, bottle, wine glass, cup, fork, knife, spoon, bowl, banana, apple, sandwich,
+  # orange, broccoli, carrot, hot dog, pizza, donut, cake, chair, couch, potted plant, bed,
+  # dining table, toilet, tv, laptop, mouse, remote, keyboard, cell phone, microwave, oven,
+  # toaster, sink, refrigerator, book, clock, vase, scissors, teddy bear, hair drier, toothbrush
   object_labels:
-    - hedgehog
-    - fox
-    - cat
-    - dog
-    - squirrel
-    - wren
-    - finch
-    - robin
-    - crow
-    - bird
-    - person
-    - delivery person
+    - bird       # Catches all birds (crows, robins, wrens, finches, etc.)
+    - cat        # Includes outdoor/feral cats and potentially small mammals
+    - dog        # Dogs and potentially foxes
+    - person     # People including delivery persons
     - car
     - bicycle
+    - truck      # Delivery trucks
   
   # Confidence threshold for object detection (0.0-1.0)
-  # Lower = more detections but less accurate
-  # Higher = fewer detections but more accurate
-  confidence_threshold: 0.25
+  # YOLO performs well at 0.25-0.5. Lower = more detections, higher = more accuracy
+  confidence_threshold: 0.35
   
   # Number of frames to analyze for object detection (3-20)
   # More frames = more accurate but slower processing
@@ -59,17 +63,20 @@ detection:
   # "objects" = prioritize object detection over face recognition
   priority: people
   
-  # Discovery mode: automatically find new objects in videos
+  # Discovery mode: automatically find objects not in your tracked list
+  # Note: YOLO only detects its 80 COCO classes, but discovery mode will alert you
+  # to other COCO objects appearing in videos (e.g., horse, cow, bear, etc.)
   discovery_mode: true
   
   # Confidence threshold for discovering new objects (higher than regular threshold)
-  discovery_threshold: 0.30
+  discovery_threshold: 0.40
   
-  # Objects to ignore (blacklist) - won't be suggested as discoveries
+  # Objects to ignore (blacklist) - YOLO COCO classes to not track
   ignored_labels:
-    - cloud
-    - sky
-    - grass
+    - potted plant
+    - chair
+    - bench
+    - traffic light
   
   # Discovered objects pending user confirmation (managed by system)
   discovered_labels: []
