--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,15 @@ oauthlib==3.2.2
 # AI/ML libraries
 # torch and torchvision installed separately in Dockerfile (CPU version)
 ultralytics==8.3.41
-pillow==10.1.0
+pillow>=10.1.0
 
 # Face recognition
 face-recognition==1.3.0
 # dlib installed separately in Dockerfile
 
 # Computer vision
-opencv-python==4.8.1.78
-numpy==1.24.3
+opencv-python>=4.8.1.78
+numpy>=1.24.3,<2.0.0
 
 # Configuration
 pyyaml==6.0.1
