--- a/requirements.txt
+++ b/requirements.txt
@@ -4,26 +4,22 @@ oauthlib==3.2.2
 
 # AI/ML libraries
 # torch and torchvision installed separately in Dockerfile (CPU version)
-ultralytics==8.3.41
-pillow>=10.1.0
+# ultralytics will bring in compatible numpy, pillow, opencv versions
+ultralytics>=8.2.0
 
 # Face recognition
 face-recognition==1.3.0
 # dlib installed separately in Dockerfile
 
-# Computer vision
-opencv-python>=4.8.1.78
-numpy>=1.24.3,<2.0.0
-
 # Configuration
-pyyaml==6.0.1
+pyyaml>=6.0
 
 # Utilities
-requests==2.31.0
-python-dateutil==2.8.2
+requests>=2.31.0
+python-dateutil>=2.8.2
 
 # Web interface
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-sse-starlette==1.8.2
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+sse-starlette>=1.8.2
