--- a/config/config.yaml
+++ b/config/config.yaml
@@ -81,6 +81,44 @@ detection:
   # Discovered objects pending user confirmation (managed by system)
   discovered_labels: []
 
+# Specialized species detection (Stage 2 - fine-grained classification)
+specialized_detection:
+  # Enable specialized species classifiers
+  enabled: false  # Set to true once models are trained
+  
+  # Target species definitions
+  species: []
+    # Example configuration (uncomment and modify when ready):
+    # - name: hedgehog
+    #   parent_yolo_class: [cat, dog]  # YOLO classes to check
+    #   model_path: /data/models/hedgehog_classifier.pt
+    #   confidence_threshold: 0.75
+    # 
+    # - name: finch
+    #   parent_yolo_class: [bird]
+    #   model_path: /data/models/finch_classifier.pt
+    #   confidence_threshold: 0.70
+    #   sub_classifiers:
+    #     - name: goldfinch
+    #       model_path: /data/models/goldfinch_classifier.pt
+    #       confidence_threshold: 0.65
+  
+  # Clip extraction settings
+  clip_extraction:
+    enabled: false  # Enable clip extraction mode
+    padding_seconds: 10  # Seconds before/after detection to include
+    merge_overlapping: true  # Merge nearby detections into one clip
+    auto_delete_non_matches: false  # DELETE non-matching videos (CAUTION!)
+    output_path: /data/clips  # Extracted clips for Plex
+  
+  # Training settings
+  training:
+    data_augmentation: true
+    validation_split: 0.2
+    epochs: 50
+    batch_size: 32
+    learning_rate: 0.001
+
 # Application settings
 # Run once and exit, or run continuously
 run_once: false
