Phase 2: Complete training pipeline implementation - Add training_manager.py with ResNet18 transfer learning - Add 7 species training API endpoints to webapp.py - Update requirements.txt with PyTorch - Phase 2 core complete, ready for UI

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ oauthlib==3.2.2
 # torch and torchvision installed separately in Dockerfile (CPU version)
 # ultralytics will bring in compatible numpy, pillow, opencv versions
 ultralytics>=8.2.0
+torch>=2.0.0
+torchvision>=0.15.0
 
 # Face recognition
 face-recognition==1.3.0
