Add Image Review settings: auto-confirm threshold and max confirmed images retention
- Added image_review section to config.yaml with auto_confirm_threshold (default 85%) and max_confirmed_images (default 200)
- Updated object_detector.py to auto-confirm detections above threshold to confirmed folder, bypassing manual review
- Implemented automatic cleanup of old confirmed images when limit exceeded
- Added Image Review UI section to config page with sliders for both settings
- Auto-confirmed detections now save directly to confirmed subfolder
- Discovery detections never auto-confirm (always require manual review)
- Cleanup happens immediately on confirmation or auto-confirm

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -129,6 +129,17 @@ scheduler:
   # Options: 15, 30, 60, 120, 240, 360, 720, 1440
   interval_minutes: 60
 
+# Image Review settings
+image_review:
+  # Auto-confirm threshold (0.0-1.0)
+  # Detections with confidence >= this threshold are automatically confirmed
+  # and bypass manual review
+  auto_confirm_threshold: 0.85
+  
+  # Maximum confirmed images to keep per label
+  # Older confirmed images are automatically deleted when limit is exceeded
+  max_confirmed_images: 200
+
 # Application settings
 # Run once and exit, or run continuously
 run_once: false
