--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,26 +24,17 @@ services:
       # Configuration (read-write so web UI can update settings)
       - ./config:/app/config
       
-      # Downloaded videos (temporary storage)
-      - /mnt/user/appdata/crittercatcher/downloads:/data/downloads
+      # Main data directory - contains all application data
+      # This should be on a volume with sufficient space for video frames and training data
+      - /mnt/user/appdata/crittercatcher:/data
       
-      # Sorted videos (organized by class)
-      - /mnt/user/Videos/CritterCatcher/sorted:/data/sorted
-      
-      # Face encodings database and unknown faces
-      - /mnt/user/appdata/crittercatcher/faces:/data/faces
-      
-      # Detected objects and discoveries (for Review & Label feature)
-      - /mnt/user/appdata/crittercatcher/objects:/data/objects
-      
-      # Ring authentication token
-      - /mnt/user/appdata/crittercatcher/tokens:/data/tokens
-      
-      # Training data for species classifiers
-      - /mnt/user/appdata/crittercatcher/training_data:/data/training_data
-      
-      # Trained models for specialized species detection
-      - /mnt/user/appdata/crittercatcher/models:/data/models
+      # Alternative: Split volumes for better performance
+      # Uncomment below and comment out /data above if needed:
+      # - /mnt/user/appdata/crittercatcher/profiles:/data/animal_profiles
+      # - /mnt/user/appdata/crittercatcher/sorted:/data/sorted
+      # - /mnt/user/appdata/crittercatcher/review:/data/review
+      # - /mnt/user/appdata/crittercatcher/training:/data/training
+      # - /mnt/user/appdata/crittercatcher/models:/data/models
     
     # Optional: GPU support for faster inference
     # Uncomment if you have NVIDIA GPU and nvidia-docker installed
@@ -64,7 +55,7 @@ services:
     
     # Healthcheck
     healthcheck:
-      test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/status"]
       interval: 30s
       timeout: 10s
       retries: 3
