--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,9 @@ pyyaml==6.0.1
 requests==2.31.0
 python-dateutil==2.8.2
 
+# Ring Camera Integration
+ring-doorbell==0.8.0
+
 # Logging and Monitoring
 python-json-logger==2.0.7
 
