--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,9 @@ python-dateutil==2.8.2
 # Ring Camera Integration
 ring-doorbell==0.8.0
 
+# Face Recognition
+face_recognition==1.3.0
+
 # Logging and Monitoring
 python-json-logger==2.0.7
 
