Bug 6: Application logging enhancement - Phase 1 (Backend setup)
- Add RotatingFileHandler to logging (10MB max, 5 backups)
- Log to /app/config/crittercatcher.log (persistent via Docker volume)
- Read log level from config.yaml logging.level instead of LOG_LEVEL env var
- Remove LOG_LEVEL from docker-compose.yml (deprecated)
- Add logging configuration section to config.yaml
- Fix config path from /config to /app/config (matches Docker mount)

Next: API endpoints and UI implementation

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -85,6 +85,16 @@ image_review:
   # Older confirmed images are automatically deleted when limit is exceeded
   max_confirmed_images: 200
 
+# Logging settings
+logging:
+  # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+  # DEBUG: Detailed information for debugging
+  # INFO: General informational messages (recommended)
+  # WARNING: Warning messages for potential issues
+  # ERROR: Error messages for failures
+  # CRITICAL: Critical errors that may cause system failure
+  level: INFO
+
 # Application settings
 # Run once and exit, or run continuously
 run_once: false
