--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ face_recognition==1.3.0
 
 # Logging and Monitoring
 python-json-logger==2.0.7
+pynvml==11.5.0  # NVIDIA GPU monitoring
 
 # Development/Testing (optional, comment out for production)
 # pytest==7.4.3
