Consolidate docs and update logging defaults
Collapse documentation into Documentation.md and update README to point to it, removing redundant root docs. Default to stdout + file logging with config/env overrides and keep API endpoints aware of file logging.

Tests not run (processing in progress).

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -99,6 +99,10 @@ logging:
   # CRITICAL: Critical errors that may cause system failure
   level: INFO
   
+  # Optional file logging (default: disabled)
+  file:
+    enabled: true
+  
   # GPU monitoring (NVIDIA GPUs only)
   gpu_monitoring:
     enabled: true
