Add force-CPU toggle and document GPU use
Add a UI/config option to force CPU even when GPU is available, pass it into YOLO and CLIP, and document GPU/CPU behavior. Include a GPU section in docker-compose and update README/Documentation.

Tests not run.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -62,6 +62,9 @@ detection:
   # Face detection model: "hog" (fast, CPU-friendly) or "cnn" (accurate, GPU recommended)
   face_model: hog
   
+  # Force CPU even if GPU is available
+  force_cpu: false
+  
   # Priority for sorting: "people" or "objects"
   # "people" = prioritize face recognition over object detection
   # "objects" = prioritize object detection over face recognition
