Add pathway routing and negative training capture
Add camera-scoped media/security pathways, expose camera list in UI, and allow saving rejected videos as negative training frames.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -121,6 +121,17 @@ run_once: false
 # Legacy interval setting (kept for backward compatibility)
 interval_minutes: 60
 
+# Pathways (camera-specific routing)
+pathways:
+  media:
+    enabled: true
+    cameras: []            # Empty = all cameras
+    profiles: []           # Empty = all profiles
+  security:
+    enabled: true
+    cameras: []            # Empty = all cameras
+    unknown_only: true     # Save only unknown people
+
 # Animal profile training (CLIP embedding classifier)
 animal_training:
   enabled: true
